# rins_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: localization.yaml  nav2.yaml
launch/: dis_sim.launch.py  localization.launch.py  nav2.launch.py  robot_description.launch.py  sim.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  task_executor.launch.py  turtlebot4_spawn.launch.py
maps/: izpit.pgm  izpit.yaml  task1.yaml  task11.pgm  task11.yaml
msg/: FaceCoords.msg  RingCoords.msg
src/: detect_rings.py  face_detection.py  robot_commander.py  robot_navigator.py  speech_servicer.py  task_executor.py  visualiser.py
urdf/standard/: turtlebot4.urdf.xacro
worlds/: bird_demo1.sdf  task1_2025.sdf  task1_blue_demo.sdf  task1_green_demo.sdf  task1_yellow_demo.sdf
worlds/2025/: bird_demo2.sdf  bird_demo3.sdf  demo1.sdf  demo2.sdf  demo3.sdf  demo4.sdf  dis.sdf  task2.sdf
